--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "JATE",
+  "name": "text-editor-pwa",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -10,14 +10,12 @@
     "build": "cd client && npm run build",
     "install": "cd server && npm i && cd ../client && npm i",
     "client": "cd client && npm start"
-
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
-    "if-env": "^1.0.4"
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "concurrently": "^5.2.0",
